# WhisperLiveKit

./: .gitignore  AGENTS.md  CONTRIBUTING.md  DEV_NOTES.md  Dockerfile  Dockerfile.cpu  LICENSE  README.md  ReadmeJP.md  audio.py  audio_processor.py  available_models.md  formatters.py  parse_args.py  pyproject.toml  setup.py  state.py  sync_extension.py  timed_objects.py  whisper_fastapi_online_server.py  whisper_noserver_test.py  whisper_online.py
chrome-extension/: README.md  live_transcription.html  live_transcription.js  manifest.json  popup.html  requestPermissions.html  requestPermissions.js  service-worker.js  sidepanel.js  welcome.html
chrome-extension/web/: live_transcription.css  live_transcription.js
diarization/: diarization_online.py
mobile/android/WhisperLiveKitTranslate/: build.gradle.kts  local.properties  settings.gradle.kts
mobile/android/WhisperLiveKitTranslate/app/: build.gradle.kts
mobile/android/WhisperLiveKitTranslate/app/src/main/: AndroidManifest.xml
mobile/ios/WhisperLiveKitTranslate/: Package.swift
mobile/ios/WhisperLiveKitTranslate/.build/: build.db  plugin-tools.yaml
mobile/ios/WhisperLiveKitTranslate/.build/arm64-apple-macosx/debug/: WhisperLiveKitTranslateCLI  plugin-tools-description.json
mobile/ios/WhisperLiveKitTranslate/.build/arm64-apple-macosx/debug/AppModule.build/: AppModule.emit-module.d  AudioCapture.d  AudioCapture.swiftdeps  ConnectionSettingsView.d  ConnectionSettingsView.swiftdeps  ContentView.d  ContentView.swiftdeps  LanguageCatalog.d  LanguageCatalog.swiftdeps  LanguagePickerView.d  LanguagePickerView.swiftdeps  ModelTypes.d  ModelTypes.swiftdeps  TranscriptHistoryView.d  TranscriptHistoryView.swiftdeps  WhisperLiveKitTranslateApp.d  WhisperLiveKitTranslateApp.swiftdeps  WhisperSession.d  WhisperSession.swiftdeps  master.priors  output-file-map.json  resource_bundle_accessor.d  resource_bundle_accessor.swiftdeps  sources
mobile/ios/WhisperLiveKitTranslate/.build/arm64-apple-macosx/debug/Modules/: AppModule.swiftdoc  AppModule.swiftmodule  AppModule.swiftsourceinfo
mobile/ios/WhisperLiveKitTranslate/Scripts/: VADProbe.swift  vadprobe
mobile/ios/WhisperLiveKitTranslate/Sources/AppModule/: AudioCapture.swift  ConnectionSettingsView.swift  ContentView.swift  LanguageCatalog.swift  LanguagePickerView.swift  ModelTypes.swift  TranscriptHistoryView.swift  WhisperLiveKitTranslateApp.swift  WhisperSession.swift
mobile/ios/WhisperLiveKitTranslate/Sources/AppModule/Resources/: Info.plist
src/: live_transcription.html
src/diarization/: diarization_online.py
src/web/: live_transcription.html
src/whisper/: timestaped_words.py
src/whisper_streaming/: asr_token.py  backends.py  online_asr.py  timed_objects.py  whisper_online.py
web/: live_transcription.html
whisper_streaming_custom/: backends.py  online_asr.py  whisper_online.py
whisperlivekit/: __init__.py  audio_processor.py  basic_server.py  core.py  download_simulstreaming_backend.py  ffmpeg_manager.py  parse_args.py  remove_silences.py  results_formater.py  timed_objects.py  token_buffer.py  warmup.py
whisperlivekit/diarization/: diarization_online.py  diart_backend.py  sortformer_backend.py  sortformer_backend_2.py
whisperlivekit/simul_whisper/: backend.py  config.py  dual_license_simulstreaming.md  generation_progress.py  license_simulstreaming.py  mlx_model_mapping.py  simul_whisper.py
whisperlivekit/simul_whisper/whisper/: __init__.py  model.py
whisperlivekit/translation/: mapping_languages.py  translation.py
whisperlivekit/web/: live_transcription.css  live_transcription.html  live_transcription.js  pcm_worklet.js  recorder_worker.js  web_interface.py
whisperlivekit/whisper_streaming_custom/: backends.py  online_asr.py  whisper_online.py
(+182 files in other folders)
